# starlink-geoip

./: .clear-target-files  .flake8  .gitignore  README.md  atlas.py  availability.py  bgp.py  geoip-patch.diff  geoip.ipynb  geoip.json  geoip.py  geoip_pop.py  jupyter.sh  main.py  peeringdb.py  pyproject.toml  residential.ipynb  run.py  util.py
.github/workflows/: availability_cell.yaml  bgp.yaml  bgp_refresh.yaml  daily.yaml  dns_ptr_refresh.yaml  geoip_feed_refresh.yaml  hourly.yaml  latency.yaml  map.yaml  monthly.yaml  monthly_latency_snapshot.yaml  onpush.yaml  onpush.yaml.bak  refresh-ptr.yaml  refresh_atlas_probe.yaml  refresh_peeringdb.yaml  run.yaml  update_map.yaml  weekly.yaml
data/feed/: latest
data/geoip/: 20240805-0436.json  20240806-1937.json  20240806-1943.json  latest
geoip/: city.json  feed.csv  geoip.json  index.html  links.json  nxdomain.json  pop.csv  pop.json  pop_location.csv  servfail.json
latency/: residential.ipynb
map/: city.json  index.html  pop.json  process.py  process_map.py
map/data/: city.json  pop.json
map_old/: pop.csv
scripts/: atlas.py  availability.py  bgp.py  geoip_pop.py  get_monthly_latency_snapshot.py  peeringdb.py
