[tool.poetry]
name = "starlink-map"
version = "0.1.0"
description = ""
authors = ["clarkzjw <i@jinwei.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.10"
matplotlib = "^3.8.2"
geocoder = "^1.38.1"
httpx = "^0.27.0"
schedule = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
